[package]
name = "cubechess-persistence-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19.2", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.9"
